--- a/client/styles/lobby.css
+++ b/client/styles/lobby.css
@@ -1,6 +1,5 @@
 @import './main.css';
 
-
 /*
 h1, .code{
     font-family: Arial, Helvetica, sans-serif;
@@ -12,20 +11,25 @@ h1, .code{
     font-family: Arial, Helvetica, sans-serif;
 }
 */
-th, td {
+th,
+td {
     padding: 15px;
     text-align: left;
-  }
-tr:hover {background-color: #f5f5f5;}
+}
+tr {
+    background-color: #f5f5f5;
+}
 
 table {
     border-collapse: collapse;
     width: 80%;
-  }
-  
-table, th, td {
+}
+
+table,
+th,
+td {
     border: 1px solid black;
-  }
+}
 
 th {
     background-color: #4c82af;
@@ -33,8 +37,8 @@ th {
 }
 
 table.center {
-    margin-left:auto; 
-    margin-right:auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 /* button{
   text-align: center;
@@ -87,17 +91,16 @@ button:hover {
   color: white;
 } */
 
-
 .container {
-  height: 200px;
-  position: relative;
-  border: 3px solid green;
+    height: 200px;
+    position: relative;
+    border: 3px solid green;
 }
 
 .vertical-center {
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
